@@ -7,6 +7,7 @@ package mx.unam.pixel.model;
 
 import java.io.Serializable;
 import java.util.ArrayList;
+import java.util.Base64;
 import java.util.List;
 import javax.persistence.Basic;
 import javax.persistence.CascadeType;
@@ -23,7 +24,11 @@ import javax.persistence.OneToMany;
 import javax.persistence.OneToOne;
 import javax.persistence.Table;
 import javax.validation.constraints.NotNull;
-import sun.misc.BASE64Encoder;
+//import sun.misc.BASE64Encoder;
+import java.util.Base64.Encoder;
+import mx.unam.pixel.repository.LocalRepository;
+import mx.unam.pixel.service.LocalService;
+import mx.unam.pixel.service.impl.LocalServiceImpl;
 
 
 
@@ -45,7 +50,8 @@ public class Local implements Serializable {
     @NotNull
     private double longitud;
     
-
+    private Boolean bano;
+    
     
     //Preguntar a memo por el trigger
     @NotNull
@@ -62,6 +68,14 @@ public class Local implements Serializable {
     private int comerOLlevar;
     
     private boolean aprobado;
+
+    public Boolean getBano() {
+        return bano;
+    }
+
+    public void setBano(Boolean bano) {
+        this.bano = bano;
+    }
     
     
     @ManyToOne(cascade = CascadeType.ALL,fetch =FetchType.EAGER)
@@ -90,7 +104,7 @@ public class Local implements Serializable {
     
     @Lob
     @Column(name = "FOTO",columnDefinition = "LONGBLOB")
-    @Basic(fetch=FetchType.LAZY)
+  
     private byte[] foto;
 
     public Integer getCalificacion() {
@@ -264,11 +278,16 @@ public class Local implements Serializable {
 
     public String getFotoUrl(){ 
             if(this!=null && this.getFoto()!=null){
-                BASE64Encoder encoder = new BASE64Encoder();
-                String imageString = encoder.encode(this.getFoto());
+                System.out.println("no es null la imagen");
+                //BASE64.Encoder encoder = new BASE64Encoder();
+                String imageString = Base64.getEncoder().encodeToString(this.getFoto());
+                
+                
+                
                 return   imageString;
             }
             else{
+                                System.out.println("SI es null la imagen");
                 return null;
             }
         }
